# app/handlers/switchcontroller/dto.go
@@ -1,0 +1,5 @@
+package handlers
+
+type switchControllerRequest struct {
+	Type string `json:"type" binding:"required"`
+}
